# fcc_simulator

./: README.md  fcc_simulation.py  pyproject.toml
data/: steady_state.mat  steady_state.py
fcc/: dynamics.py
fractionator/: dynamics.py
riser/: pfr.py
thermodynamics/: enthalpy.py
utils/: controllers.py  disturbances.py  filters.py
